--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.12.1",
     "chart.js": "^4.5.0",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
+    "chartjs-chart-matrix": "^3.0.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
