--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "chartjs-chart-financial": "^0.2.1",
     "chartjs-chart-matrix": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "next": "15.5.2",
     "react": "19.1.0",
